--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 
 env: {
-  siteTitle: 'Your Company',
-  siteDescription: 'Your company description.',
-  siteKeywords: 'your company keywords',
-  siteUrl: 'https://nutritrack.chrstnl.com/',
-  siteImagePreviewUrl: '/images/preview.jpeg',
+  siteTitle: 'KKP luggages',
+  siteDescription: 'Luggage storage and handling company in KNUST',
+  siteKeywords: 'Storages and management, KNUST storage and handling company in kumasi',
+  siteUrl: '#',
+  siteImagePreviewUrl: 'https://github.com/Leslie-kardashev/KKPluggages/blob/main/public/WhatsApp%20Image%202024-04-16%20at%208.12.19%20PM.jpeg',
   twitterHandle: '@your_handle'
 }
