--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ env: {
   siteTitle: 'KKP luggages',
   siteDescription: 'Luggage storage and handling company in KNUST',
   siteKeywords: 'Storages and management, KNUST storage and handling company in kumasi',
-  siteUrl: '#',
+  siteUrl: 'https://kkpluggages.vercel.app/',
   siteImagePreviewUrl: 'https://github.com/Leslie-kardashev/KKPluggages/blob/main/public/WhatsApp%20Image%202024-04-16%20at%208.12.19%20PM.jpeg',
-  twitterHandle: '@your_handle'
+  twitterHandle: '@travelwithkkp'
 }
